# quant-mind-mcp

./: .dockerignore  .env.example  .gitignore  CHANGES.md  QUICK_START.md  README.md  README_LOCAL_SETUP.md  activate.sh  main.py  pyproject.toml  requirements.txt  test_server.py
assets/prompts/: backtest_template_vectorbt.py  quant_system_prompt.md  strategy_guidelines.md
assets/research_papers/: mean_reversion.md  momentum_crash.md  momentum_strategies.md  momentum_trading.md  volatility_trading.md
scripts/: deploy.sh  install.sh  setup_configs.py  start_server.sh  test_server.py  verify_implementation.py  verify_integrity.py  verify_mcp_implementation.py
src/: __init__.py
src/db/: __init__.py
src/server/: __init__.py  config.py  mcp_server.py
src/tools/: __init__.py  alpha_vault.py  knowledge_base.py
